# Notification-micro-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
src/: dependencies.py  main.py
src/adapters/email_sender/: ses_adapter.py
src/adapters/message_broker/: consumer.py
src/adapters/repository/: mongodb_adapter.py
src/application/: services.py
src/core/: logger.py  settings.py
src/domain/: entities.py  ports.py
tests/: test_mongo_connection.py
