[project]
name = "notification-micro-service"
version = "0.1.0"
description = ""
authors = [
    {name = "yevhenii-memruk",email = "yevhenii.memruk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "pymongo (>=4.11.3,<5.0.0)",
    "pydantic[email] (>=2.11.2,<3.0.0)",
    "boto3 (>=1.37.24,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "motor (>=3.7.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
